implemented more bones